Fix alignment in actions buttons
Fix action buttons being always just a bit misaligned from other text
(including the column header).

--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -67,6 +67,9 @@ body {
     font-weight: bold;
     padding: 0 0.4rem;
 }
+.actions a:first-child {
+    padding-left: 0;
+}
 th {
     white-space: nowrap;
 }
